--- a/src/pages/Home/PopularDestinations/PopularDestinations.css
+++ b/src/pages/Home/PopularDestinations/PopularDestinations.css
@@ -25,24 +25,25 @@
 
 .container {
     display: flex;
-    overflow: hidden;
-    position: relative;
-    flex: 0 0 150px;
     justify-content: center;
+    position: relative;
+}
+
+.container img{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
 }
 
 .overly {
-    align-items: center;
-    display: flex;
-    justify-content: center;
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    opacity: 0;
+    top: 0;
     background-color: rgba(0, 0, 0, 0.7);
     overflow: hidden;
-    height: 0;
-    opacity: 0;
+    text-align: center;
     transition: .3s ease-in-out;
 }
 
